"Delete" = "Delete";
"OK" = "OK";

"Home" = "Home";
"Open" = "Open";
"Closed" = "Closed";
"Awards" = "Awards";

"Up next" = "Up next";
"More to explore" = "More to explore";

"Open Projects" = "Open Projects";
"Closed Projects" = "Closed Projects";
"Add Projects" = "Add Projects";
"Add Project" = "Add Project";




// a button that shows a memu with the following item
"Sort" = "Sort";
"Sort items" = "Sort items";
"Optimized" = "Optimized";
"Title" = "Title";

"Are you sure you want to delete this project? You will also delete all the items it contains." = "Are you sure you want to delete this project? You will also delete all the items it contains.";

"Basic setting" = "Basic setting";

"Basic settings" = "Basic settings";


"Closing a project moves it from the Open to Closed tab; deleting it removes the project completely." = "Closing a project moves it from the Open to Closed tab; deleting it removes the project completely.";


"Creation Date" = "Creation Date";

"Custom project Color" = "Custom project Color";

"Delete project?" = "Delete project?";

"High" = "High";

"Low" = "Low";

"Medium" = "Medium";

"Priority" = "Priority";

"There is nothing here right now." = "There is nothing here right now.";


"Add New Item" = "Add New Item";
"Edit Item" = "Edit Item";
"Mark Completed" = "Mark Completed";
"Edit Project" = "Edit Project";
"Close this project" = "Close this project";
"Reopen this project" = "Reopen this project";
"Delete this project" = "Delete this project";

"New Project" = "New Project";
"New Item" = "New Item";

"Item name" = "Item name";
"Description" = "Description";
"Project name" = "Project name";
"Description of this project" = "Description of this project";

"Please select something from the menu to begin" = "Please select something from the menu to begin";

"Unlocked: %@" = "Unlocked: %@";
"Locked" = "Locked";
"%@, %lld items, %g%% complete." = "%@, %lld items, %g%% complete.";

"Select a project color" = "Select a project color";
"Pink" = "Pink";
"Purple" = "Purple";
"Red" = "Red";
"Orange" = "Orange";
"Gold" = "Gold";
"Green" = "Green";
"Teal" = "Teal";
"Light Blue" = "Light Blue";
"Dark Blue" = "Dark Blue";
"Midnight" = "Midnight";
"Dark Gray" = "Dark Gray";
"Gray" = "Gray";

"%@, completed." = "%@, completed.";
"%@, high priority." = "%@, high priority.";

// Unlocking premium
"Get Unlimited Projects" = "Get Unlimited Projects";
"You can add three projects for free, or pay %@ to add unlimited projects." = "You can add three projects for free, or pay %@ to add unlimited projects.";
"If you already bought the unlock on another device, press Restore Purchases." = "If you already bought the unlock on another device, press Restore Purchases.";
"Restore Purchases" = "Restore Purchases";
"Sorry, there was an error loading the store. Please try again later." = "Sorry, there was an error loading the store. Please try again later.";
"Buy: %@" = "Buy: %@";
"Loading…" = "Loading…";
"Thank you!" = "Thank you!";
"Thank you! Your request is pending approval, but you can carry on using the app in the meantime." = "Thank you! Your request is pending approval, but you can carry on using the app in the meantime.";
"Dismiss" = "Dismiss";
